--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,65 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/recpomsive.css">
 </head>
+
 <body>
+    <!-- Header Part -->
+    <header>
+        <nav>
+            <h2>Influencer Products</h2>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Sign up</a></li>
+                <li><a href="#">Log in</a></li>
+                <div>
+                    <img class="icon" src="icon/search.png" alt="" />
+                    <img class="icon" src="icon/cart.png" alt="" />
+                </div>
+            </ul>
+        </nav>
+    </header>
+
+    <section>
+        <div class="hero">
+            <div class="left">
+                <h1>Start your Journey as Influencer</h1>
+                <p class="text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, sunt
+                    aspernatur facere fugit velit autem.
+                </p>
+                <div>
+                    <button class="btn">
+                        Prebook now
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+
+            <div class="right">
+                <img src="images/main-camera.png" alt="" />
+            </div>
+        </div>
+    </section>
     
+    <section class="tag">
+        <hr />
+        <div>
+          <img src="logos/Alibaba.svg" alt="" />
+          <img src="logos/Amazon.svg" alt="" />
+          <img src="logos/Daraz.pk Logo.svg" alt="" />
+          <img src="logos/Ebay.svg" alt="" />
+          <img src="logos/Rakuten.svg" alt="" />
+          <img src="logos/Walmart.svg" alt="" />
+          <img src="logos/Target.svg" alt="" />
+        </div>
+        <hr />
+      </section>
+  
 </body>
+
 </html>
