--- a/index.html
+++ b/index.html
@@ -52,21 +52,276 @@
             </div>
         </div>
     </section>
-    
+
     <section class="tag">
         <hr />
         <div>
-          <img src="logos/Alibaba.svg" alt="" />
-          <img src="logos/Amazon.svg" alt="" />
-          <img src="logos/Daraz.pk Logo.svg" alt="" />
-          <img src="logos/Ebay.svg" alt="" />
-          <img src="logos/Rakuten.svg" alt="" />
-          <img src="logos/Walmart.svg" alt="" />
-          <img src="logos/Target.svg" alt="" />
+            <img src="logos/Alibaba.svg" alt="" />
+            <img src="logos/Amazon.svg" alt="" />
+            <img src="logos/Daraz.pk Logo.svg" alt="" />
+            <img src="logos/Ebay.svg" alt="" />
+            <img src="logos/Rakuten.svg" alt="" />
+            <img src="logos/Walmart.svg" alt="" />
+            <img src="logos/Target.svg" alt="" />
         </div>
         <hr />
-      </section>
-  
+    </section>
+
+    <main>
+        <!-- Popular Collection -->
+        <section class="product">
+            <div class="popular">
+                <h2 class="title">Popular Collection</h2>
+                <div class="card-container">
+                    <div class="card">
+                        <div class="img-con">
+                            <img src="images/tripod.png" alt="" />
+                        </div>
+                        <div class="card-info">
+                            <h2>Flex Tripod</h2>
+                            <h3>$50.97</h3>
+                            <div class="rating">
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9734;</span>
+                                <span id="rate">4.99</span>
+                            </div>
+                            <p class="text text2">
+                                Wordwide shifting vailable Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img-con">
+                            <img src="images/mic.png" alt="" />
+                        </div>
+                        <div class="card-info">
+                            <h2>Microphone</h2>
+                            <h3>$120.25</h3>
+                            <div class="rating">
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9734;</span>
+                                <span id="rate">4.99</span>
+                            </div>
+                            <p class="text text2">
+                                Wordwide shifting vailable Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img-con">
+                            <img src="images/airpod.png" alt="" />
+                        </div>
+                        <div class="card-info">
+                            <h2>Airbuds</h2>
+                            <h3>$100.00</h3>
+                            <div class="rating">
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9734;</span>
+                                <span id="rate">4.99</span>
+                            </div>
+                            <p class="text text2">
+                                Wordwide shifting vailable Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img-con">
+                            <img src="images/drone.png" alt="" />
+                        </div>
+                        <div class="card-info">
+                            <h2>Drone</h2>
+                            <h3>$950.97</h3>
+                            <div class="rating">
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9734;</span>
+                                <span id="rate">4.99</span>
+                            </div>
+                            <p class="text text2">
+                                Wordwide shifting vailable Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img-con">
+                            <img src="images/lights.png" alt="" />
+                        </div>
+                        <div class="card-info">
+                            <h2>Light Setup</h2>
+                            <h3>$1500.00</h3>
+                            <div class="rating">
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9734;</span>
+                                <span id="rate">4.99</span>
+                            </div>
+                            <p class="text text2">
+                                Wordwide shifting vailable Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img-con">
+                            <img src="images/setup.png" alt="" />
+                        </div>
+                        <div class="card-info">
+                            <h2>Photoshoot set</h2>
+                            <h3>$50.97</h3>
+                            <div class="rating">
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9734;</span>
+                                <span id="rate">4.99</span>
+                            </div>
+                            <p class="text text2">
+                                Wordwide shifting vailable Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img-con">
+                            <img src="images/camera.png" alt="" />
+                        </div>
+                        <div class="card-info">
+                            <h2>Vlogging Camera</h2>
+                            <h3>$50.97</h3>
+                            <div class="rating">
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9734;</span>
+                                <span id="rate">1800.00</span>
+                            </div>
+                            <p class="text text2">
+                                Wordwide shifting vailable Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img-con">
+                            <img src="images/single-light.png" alt="" />
+                        </div>
+                        <div class="card-info">
+                            <h2>Green Screen</h2>
+                            <h3>$150.97</h3>
+                            <div class="rating">
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9734;</span>
+                                <span id="rate">4.99</span>
+                            </div>
+                            <p class="text text2">
+                                Wordwide shifting vailable Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="img-con">
+                            <img src="images/camera.png" alt="" />
+                        </div>
+                        <div class="card-info">
+                            <h2>Action Camera</h2>
+                            <h3>$380.50</h3>
+                            <div class="rating">
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9733;</span>
+                                <span class="star">&#9734;</span>
+                                <span id="rate">4.99</span>
+                            </div>
+                            <p class="text text2">
+                                Wordwide shifting vailable Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <span class="btn btn2">See More
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                </svg>
+            </span>
+        </section>
+
+
+
+        <section>
+            <div class="featured">
+                <div class="img">
+                    <img src="images/gear.png" alt="">
+                </div>
+                <div class="info">
+                    <h2>
+                        Featured products at one place
+                    </h2>
+                    <p class="text">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                    <div>
+                        <button class="btn">
+                            Join Now
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+    <!-- Footer Section -->
+    <footer>
+        <div class="foot">
+            <h2>Influencer Products</h2>
+            <p class=" textf">
+                Copyright © 2025 &<br> Developed by <a href="https://ahassh1.com">Ahasan Habib</a>
+            </p>
+            <p class="">
+                All rights reserved
+            </p>
+            <div id="social">
+                <img src="icon/facebook.svg" alt="">
+                <img src="icon/instagram.svg" alt="">
+                <img src="icon/github.svg" alt="">
+                <img src="icon/youtube.svg" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
